<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_menu">Search</string>
    <string name="checkbox_mode">List Mode</string>
    <string name="note_details_hint">Note</string>
    <string name="note_title_hint">Title</string>
    <string name="page_title_note_details">Note Details</string>
    <string name="close_menu_item">Close</string>
    <string name="notes_selected_tf_menu_item">Number of notes selected</string>
    <string name="pin_menu_item">Pin to the top</string>
    <string name="reminder_menu_item">Add reminder</string>
    <string name="label_menu_item">Add label</string>
    <string name="delete_menu_item">Delete</string>
    <string name="drawer_notes">Notes</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_create_new_label">Create new label</string>
    <string name="drawer_label">Label</string>
    <string name="drawer_reminders">Reminders</string>
    <string name="notes_details_fragment_title" />
    <string name="notes_main_fragment_title">Notes</string>
    <string name="note_details_label_menu_item">Labels</string>
    <string name="addbox_menu_item">Add content</string>
    <string name="more_vert_menu_item">More options</string>
    <string name="bottom_sheet_delete">Delete</string>
    <string name="bottom_sheet_copy">Make a copy</string>
    <string name="bottom_sheet_send">Send</string>
    <string name="bottom_sheet_checkboxes">Checkboxes</string>
    <string name="app_name_keep">\u0020Keep</string>
    <string name="bottom_sheet_reminder_tomorrow_morning">Tomorrow morning</string>
    <string name="bottom_sheet_reminder_tomorrow_evening">Tomorrow evening</string>
    <string name="bottom_sheet_reminder_pick_date_and_time">Pick date &amp; time</string>
    <string name="tomorrowMorningTime">8:00 AM</string>
    <string name="tomorrowMorningTime24">08:00</string>
    <string name="tomorrowEveningTime">6:00 PM</string>
    <string name="tomorrowEveningTime24">18:00</string>
    <string name="afternoonTime">1:00 PM</string>
    <string name="afternoonTime24">13:00</string>
    <string name="nightTime">8:00 PM</string>
    <string name="nightTime24">20:00</string>
    <string name="nextWeekMorning">%1$s morning</string>
    <string name="nextWeekMorningTime">%1$s 8:00 AM</string>
    <string name="nextWeekMorningTime24">%1$s 08:00</string>
    <string name="reminder_date_time_picker_dialog_title">Add reminder</string>
    <string name="reminder_date_time_picker_cancel_btn">Cancel</string>
    <string name="reminder_date_time_picker_save_btn">Save</string>
    <string name="reminder_spinner_date_placeholders">%1$s %2$d%3$s</string>
    <string name="reminder_spinner_time_placeholders">%1$s:%2$s %3$s</string>
    <string name="reminder_spinner_repeat_placeholders">Repeats %1$s</string>

    <string-array name="reminderDates">
        <item>Not selected</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Next %1$s</item>
        <item>Pick a date…</item>
    </string-array>

    <string-array name="reminderTime">
        <item>Not selected</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
        <item>Pick a time…</item>
    </string-array>

    <string-array name="reminderRepeats">
        <item>Does not repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

</resources>