<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/main_menu_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_outline_lightbulb_24"
            android:title="@string/drawer_notes" />

        <item
            android:id="@+id/reminders"
            android:icon="@drawable/ic_outline_add_alert_24"
            android:title="@string/drawer_reminders" />

    </group>

    <group
        android:id="@+id/label_menu_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/label"
            android:icon="@drawable/ic_outline_label_24"
            android:title="@string/drawer_label" />

        <item
            android:id="@+id/createNewLabel"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/drawer_create_new_label" />

    </group>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/drawer_settings" />

</menu>