<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/cancel_button"-->
<!--        android:icon="@drawable/ic_baseline_close_24"-->
<!--        android:title="@string/close_menu_item"-->
<!--        app:showAsAction="always"/>-->

<!--    <item-->
<!--        android:id="@+id/notes_selected_tf"-->
<!--        android:title="@string/notes_selected_tf_menu_item"-->
<!--        app:actionViewClass="android.widget.TextView"-->
<!--        app:showAsAction="always"/>-->

    <item
        android:id="@+id/pin"
        android:icon="@drawable/ic_outline_push_pin_24"
        android:title="@string/pin_menu_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/reminder"
        android:icon="@drawable/ic_outline_add_alert_24"
        android:title="@string/reminder_menu_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/label"
        android:icon="@drawable/ic_outline_label_24"
        android:title="@string/label_menu_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete_menu_item"
        app:showAsAction="never"/>

</menu>