<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="@dimen/bottom_sheet_icon_size"
                    android:layout_height="@dimen/bottom_sheet_icon_size"
                    android:src="@drawable/ic_outline_delete_24"
                    android:padding="9dp"
                    />

                <TextView
                    style="@style/BottomSheetTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bottom_sheet_delete"
                    android:paddingStart="@dimen/bottom_sheet_text_padding_start"
                    android:paddingEnd="@dimen/bottom_sheet_text_padding_start"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/makeACopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="@dimen/bottom_sheet_icon_size"
                    android:layout_height="@dimen/bottom_sheet_icon_size"
                    android:src="@drawable/ic_outline_content_copy_24"
                    android:padding="12dp"/>

                <TextView
                    style="@style/BottomSheetTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bottom_sheet_copy"
                    android:paddingStart="@dimen/bottom_sheet_text_padding_start"
                    android:paddingEnd="@dimen/bottom_sheet_text_padding_start"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="@dimen/bottom_sheet_icon_size"
                    android:layout_height="@dimen/bottom_sheet_icon_size"
                    android:src="@drawable/ic_outline_share_24"
                    android:padding="11dp"/>

                <TextView
                    style="@style/BottomSheetTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bottom_sheet_send"
                    android:paddingStart="@dimen/bottom_sheet_text_padding_start"
                    android:paddingEnd="@dimen/bottom_sheet_text_padding_start"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>